# magic_pricemaker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
api/: __init__.py  health.py  order.py  order_book.py
app/: main.py
app/api/: __init__.py  health.py  index.py  order.py  trade.py
app/core/: __init__.py  api_routes.py  config.py  custom_worker.py  db.py  redis_db.py  socketio.py
app/crud/: order.py  orderbook.py  trade.py
app/models/: __init__.py  order.py  trade.py
app/schemas/: order.py  trade.py
core/: __init__.py  config.py  db.py
models/: __init__.py  order.py  order_book.py  trade.py
schemas/: order.py
