[tool.poetry]
name = "magic_pricemaker"
version = "0.1.0"
description = ""
authors = ["Chinmay H <4chinmai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
fastadmin = {extras = ["fastapi", "sqlalchemy"], version = "^0.1.41"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
