[tool.poetry]
name = "magic_pricemaker"
version = "0.1.0"
description = ""
authors = ["Chinmay H <4chinmai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
aiosqlite = "^0.20.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
fastapi-utilities = "^0.2.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
redis = "^5.0.3"
nest-asyncio = "^1.6.0"
python-socketio = {extras = ["client"], version = "^5.11.2"}
requests = "^2.31.0"
websocket-client = "^1.7.0"
websockets = "^12.0"
aiohttp = "^3.9.3"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
